welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase:30: error: not found: value ChangementLigne
  ChangementLigne();
  ^